--- a/galasa-parent/dev.galasa.framework.maven.repository/pom.xml
+++ b/galasa-parent/dev.galasa.framework.maven.repository/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>${dev.galasa.framework.maven.repository.spi}</version>
+			<version>0.3.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
