--- a/galasa-parent/galasa-boot/pom.xml
+++ b/galasa-parent/galasa-boot/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>${dev.galasa.framework.maven.repository.spi}</version>
+			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -82,12 +82,12 @@
 						<artifactItem>
 							<groupId>dev.galasa</groupId>
 							<artifactId>dev.galasa.framework.maven.repository</artifactId>
-							<version>${dev.galasa.framework.maven.repository}</version>
+							<version>0.3.0-SNAPSHOT</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>dev.galasa</groupId>
 							<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-							<version>${dev.galasa.framework.maven.repository.spi}</version>
+							<version>0.3.0-SNAPSHOT</version>
 						</artifactItem>
 					</artifactItems>
 					<type>jar</type>
