Enable storing of GIT HASH in JAR

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -240,6 +240,14 @@
 				<groupId>dev.galasa</groupId>
 				<artifactId>galasa-maven-plugin</artifactId>
 				<extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>process-resources</id>
+                        <goals>
+                            <goal>gitcommithash</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
