Sort out validation api

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -129,7 +129,8 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>${validation-api}</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
