--- a/galasa-parent/galasa-demo-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/galasa-parent/galasa-demo-archetype/src/main/resources/archetype-resources/pom.xml
@@ -71,7 +71,7 @@
 				<plugin>
 					<groupId>dev.galasa</groupId>
 					<artifactId>galasa-maven-plugin</artifactId>
-					<version>0.3.0-SNAPSHOT</version>
+					<version>0.3.0</version>
 				</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
