--- a/galasa-parent/dev.galasa.framework.resource.management/pom.xml
+++ b/galasa-parent/dev.galasa.framework.resource.management/pom.xml
@@ -6,42 +6,42 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.resource.management</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<packaging>bundle</packaging>
 
 	<dependencies>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>${dev.galasa.framework}</version>
+			<version>[0.3.0,1.0.0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>${commons-logging}</version>
+			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient</artifactId>
-			<version>${prometheus.simpleclient}</version>
+			<version>0.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient_httpserver</artifactId>
-			<version>${prometheus.httpserver}</version>
+			<version>0.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient_hotspot</artifactId>
-			<version>${prometheus.hotspot}</version>
+			<version>0.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
