--- a/galasa-parent/dev.galasa.framework.maven.repository/pom.xml
+++ b/galasa-parent/dev.galasa.framework.maven.repository/pom.xml
@@ -6,18 +6,18 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.maven.repository</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<packaging>bundle</packaging>
 
 	<dependencies>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>[0.3.0,1.0.0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>${commons-logging}</version>
+			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
 
