--- a/galasa-parent/galasa-boot/pom.xml
+++ b/galasa-parent/galasa-boot/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<artifactId>galasa-boot</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>Galasa Boot</name>
@@ -19,27 +20,47 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.framework</artifactId>
-			<version>${felix.framework}</version>
+			<version>6.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.bundlerepository</artifactId>
-			<version>${felix.bundlerepository}</version>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.scr</artifactId>
+			<version>2.1.14</version>
+		</dependency>
+		<dependency>
+			<groupId>dev.galasa</groupId>
+			<artifactId>dev.galasa.framework.maven.repository</artifactId>
+			<version>[0.3.0,1.0.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>[0.3.0,1.0.0)</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>${commons-cli}</version>
+			<version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${commons-io}</version>
+			<version>2.6</version>
 		</dependency>
 	</dependencies>
 
@@ -62,32 +83,32 @@
 						<artifactItem>
 							<groupId>org.apache.felix</groupId>
 							<artifactId>org.apache.felix.bundlerepository</artifactId>
-							<version>${felix.bundlerepository}</version>
+							<version>2.0.2</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>org.apache.felix</groupId>
 							<artifactId>org.apache.felix.scr</artifactId>
-							<version>${felix.scr}</version>
+							<version>2.1.14</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>commons-logging</groupId>
 							<artifactId>commons-logging</artifactId>
-							<version>${commons-logging}</version>
+							<version>1.2</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>log4j</groupId>
 							<artifactId>log4j</artifactId>
-							<version>${log4j}</version>
+							<version>1.2.17</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>dev.galasa</groupId>
 							<artifactId>dev.galasa.framework.maven.repository</artifactId>
-							<version>0.3.0-SNAPSHOT</version>
+							<version>0.3.0</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>dev.galasa</groupId>
 							<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-							<version>0.3.0-SNAPSHOT</version>
+							<version>0.3.0</version>
 						</artifactItem>
 					</artifactItems>
 					<type>jar</type>
