--- a/galasa-parent/galasa-demo-archetype/pom.xml
+++ b/galasa-parent/galasa-demo-archetype/pom.xml
@@ -8,11 +8,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 	
 	<artifactId>galasa-demo-archetype</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<packaging>maven-archetype</packaging>
 
 	<build>
