latest staging standards

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -82,12 +82,12 @@
 
 	<distributionManagement>
 		<repository>
-			<id>galasa.repo</id>
-			<url>${galasa.distribution.repo}</url>
+			<id>galasa.release.repo</id>
+			<url>${galasa.release.repo}</url>
 		</repository>
 		<snapshotRepository>
-			<id>galasa.repo</id>
-			<url>${galasa.distribution.repo}</url>
+			<id>galasa.snapshot.repo</id>
+			<url>${galasa.snapshot.repo}</url>
 		</snapshotRepository>
 	</distributionManagement>
 
