--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -11,7 +11,8 @@
 	</parent>
 
 	<artifactId>dev.galasa.framework.obr</artifactId>
-	<version>0.3.0</version>
+	<!-- If updating version,  reflect change in dev.galasa.uber.obr -->
+	<version>0.3.1</version>
 	<packaging>galasa-obr</packaging>
 
 	<name>galasa Framework OBR</name>
@@ -20,43 +21,43 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.k8s.controller</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.docker.controller</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.resource.management</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.metrics</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.3.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
