--- a/galasa-parent/dev.galasa.framework.maven.repository.spi/pom.xml
+++ b/galasa-parent/dev.galasa.framework.maven.repository.spi/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0</version>
+		<version>0.4.0-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 </project>
