--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.3.0</version>
+		<version>0.4.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework</artifactId>
@@ -17,7 +17,7 @@
 	galasa-bom
 	dev.galasa.eclipse.feature (including feature.xml)
 	-->
-	<version>0.3.1</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa Framework</name>
