--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>dev.galasa</groupId>
 	<artifactId>galasa-parent</artifactId>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Galasa Parent</name>
@@ -162,7 +162,7 @@
 				<plugin>
 					<groupId>dev.galasa</groupId>
 					<artifactId>galasa-maven-plugin</artifactId>
-					<version>0.3.0</version>
+					<version>0.4.0-SNAPSHOT</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.felix</groupId>
