Doclet and aggregate goals

--- a/galasa-parent/galasautils-maven-plugin/pom.xml
+++ b/galasa-parent/galasautils-maven-plugin/pom.xml
@@ -63,6 +63,12 @@
 			<version>0.1.55</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 
 
