Minor template changes

--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/managerTopic.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/managerTopic.template
@@ -1,9 +1,8 @@
 ---
-path: "/docs/managers//$filename-manager"
+path: "/docs/managers/${filename}-manager"
 title: "$name Manager"
 ---
 #set( $H = "#" )
-$H$H $name Manager
 $manager
 #if( $annotations )
 $H$H Annotations
