--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/annotation.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/annotation.template
@@ -2,6 +2,11 @@
 | --------------------------------------- | :------------------------------------- |
 | Name: | $name |
 | Description: | $description |
+#if ( $attributes )
+#foreach( $attribute in $attributes )
+| Attribute: `$attribute.name` | $attribute.text |
+#end
+#end
 | Syntax: | $examples |
 #if ( $extra ) 
 | Notes: | $extra |
