--- a/galasa-parent/galasautils-maven-plugin/pom.xml
+++ b/galasa-parent/galasautils-maven-plugin/pom.xml
@@ -77,9 +77,16 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.11.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-	
-		<profiles>
+
+	<profiles>
 		<profile>
 			<id>default-profile</id>
 			<activation>
@@ -105,7 +112,7 @@
 			</properties>
 		</profile>
 	</profiles>
-	
+
 
 
 	<build>
