Add release state to the generated docs

--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/manager.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/manager.template
@@ -1,13 +1,17 @@
 #set( $H = "#" )
 
+#if( $state )
+**$state**
+
+#end
 $H$H Overview
 $description
 
 #if( $limitations )
 $H$H Limitations
 $limitations
-#end
 
+#end
 #if( $extra )
 $H$H Further information
 $extra
