--- a/galasa-parent/dev.galasa.framework.api.testcatalog/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.testcatalog/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.testcatalog</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa API Test Catalog</name>
