--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework</artifactId>
@@ -17,7 +17,7 @@
 	galasa-bom
 	dev.galasa.eclipse.feature (including feature.xml)
 	-->
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa Framework</name>
@@ -26,13 +26,13 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.4.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>[0.3.0,1.0.0)</version>
+			<version>0.4.0</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
