--- a/galasa-parent/galasautils-maven-plugin/pom.xml
+++ b/galasa-parent/galasautils-maven-plugin/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 
 	<artifactId>galasautils-maven-plugin</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<properties>
