--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -75,6 +75,7 @@
 		<module>dev.galasa.framework.api.launcher</module>
 		<module>dev.galasa.framework.api.testcatalog</module>
 		<module>galasautils-maven-plugin</module>
+		<module>galasastaging-maven-plugin</module>
 		<module>dev.galasa.framework.api.runs</module>
 	</modules>
 
