--- a/galasa-parent/dev.galasa.framework.api.bootstrap/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.bootstrap/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.5.0-SNAPSHOT</version>
+		<version>0.5.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.bootstrap</artifactId>
-	<version>0.5.0-SNAPSHOT</version>
+	<version>0.5.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa API boostrap</name>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.5.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
