--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/property.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/property.template
@@ -1,3 +1,5 @@
+<details>
+<summary>$title</summary>
 | Property: | $title |
 | --------------------------------------- | :------------------------------------- |
 | Name: | $name |
@@ -10,3 +12,4 @@
 
 $extra
 #end
+</details>
