--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/annotation.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/annotation.template
@@ -1,3 +1,5 @@
+<details>
+<summary>$title</summary>
 | Annotation: | $title |
 | --------------------------------------- | :------------------------------------- |
 | Name: | $name |
@@ -11,3 +13,4 @@
 #if ( $extra ) 
 | Notes: | $extra |
 #end
+</details>
