Changes to Framework CPS + Webservices for CPS and RAS
Signed-off-by: Richard Somers <rsomers1@sheffield.ac.uk>

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -95,6 +95,7 @@
 		<module>galasautils-maven-plugin</module>
 		<module>galasastaging-maven-plugin</module>
 		<module>dev.galasa.framework.api.runs</module>
+		<module>dev.galasa.framework.api.cps</module>
 		<module>dev.galasa.framework.api</module>
 	</modules>
 
