Added JDOC and missed pom
Signed-off-by: Richard Somers <rsomers1@sheffield.ac.uk>

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -96,6 +96,7 @@
 		<module>galasastaging-maven-plugin</module>
 		<module>dev.galasa.framework.api.runs</module>
 		<module>dev.galasa.framework.api.cps</module>
+		<module>dev.galasa.framework.api.ras</module>
 		<module>dev.galasa.framework.api</module>
 	</modules>
 
