Move to 0.9.0-SNAPSHOT
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>dev.galasa</groupId>
 	<artifactId>galasa-parent</artifactId>
-	<version>0.8.0</version>
+	<version>0.9.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Galasa Parent</name>
@@ -194,7 +194,7 @@
 				<plugin>
 					<groupId>dev.galasa</groupId>
 					<artifactId>galasa-maven-plugin</artifactId>
-					<version>0.8.0</version>
+					<version>0.9.0-SNAPSHOT</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.felix</groupId>
