--- a/galasa-parent/dev.galasa.framework.api.authentication/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.authentication/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.8.0</version>
+		<version>0.9.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.authentication</artifactId>
-	<version>0.8.0</version>
+	<version>0.9.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.8.0</version>
+			<version>0.9.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
