try without es6
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/dev.galasa.framework.api.ras/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.ras/pom.xml
@@ -69,7 +69,7 @@
 							<inputSpec>${project.basedir}/openapi.yaml</inputSpec>
 							<generatorName>typescript-rxjs</generatorName>
 							<output>${project.build.directory}/openapi</output>
-							<additionalProperties>npmName=galasa-ras-api-ts-rxjs,npmRepository=${npm.repo},npmVersion=${npm.version},snapshot=${npm.snapshot},supportsES6=true</additionalProperties>
+							<additionalProperties>npmName=galasa-ras-api-ts-rxjs,npmRepository=${npm.repo},npmVersion=${npm.version},snapshot=${npm.snapshot},supportsES6=false</additionalProperties>
 						</configuration>
 					</execution>
 				</executions>
