add custom maven repos
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -10,6 +10,13 @@ subprojects {
         withSourcesJar()
     }
 
+    repositories {
+        maven {
+            url System.getenv('MAVEN_REPO')
+        }
+        mavenCentral()
+    }
+
     publishing {
 	    publications {
             maven(MavenPublication) {
