Disable signing for snapshots
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -103,8 +103,7 @@ subprojects {
 
     
     signing {
-
-    //   required { isReleaseVersion && gradle.taskGraph.hasTask("publish") }
+        required { isReleaseVersion && gradle.taskGraph.hasTask("publish") }
         useGpgCmd() 
         sign publishing.publications.maven 
     }
