put cache stuff in wrong place
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -1,3 +1,13 @@
 rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
+
+buildCache {
+    remote(HttpBuildCache) {
+        url = 'http://nexus.cics-ts.hur.hdclab.intranet.ibm.com:5071/'
+        credentials {
+            username = cacheUsername
+            password = cachePassword
+        }
+    }
+}
