--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -2,9 +2,12 @@ rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
 
+boolean isCiServer = System.getenv().containsKey("JENKINS_HOME")
+
 buildCache {
     remote(HttpBuildCache) {
         url = 'http://nexus.cics-ts.hur.hdclab.intranet.ibm.com:5071/'
+        push = isCiServer
         credentials {
             username = cacheUsername
             password = cachePassword
