try hardcoding it
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -7,7 +7,7 @@ boolean isCiServer = System.getenv().containsKey("JENKINS_HOME")
 buildCache {
     remote(HttpBuildCache) {
         url = 'http://nexus.cics-ts.hur.hdclab.intranet.ibm.com:5071/'
-        push = isCiServer
+        push = true
         credentials {
             username = cacheUsername
             password = cachePassword
